@@ -1,6 +1,6 @@
 Package: sem.additions
-Version: 0.1-04
-Date: 2009-0512
+Version: 0.1-05
+Date: 2009-1229
 Title: Additional Methods for Structural Equation Modelling
 Author: Jarrett Byrnes <byrnes@msi.ucsb.edu>
 Maintainer: Jarrett Byrnes <byrnes@msi.ucsb.edu>
